--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "use-async-effect": "^2.2.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "source ./.env.local && REACT_APP_TS=1 REACT_APP_ALL=$(echo $REACT_APP_TS$MARVEL_PRIVATE_KEY$REACT_APP_PUBLIC_KEY) REACT_APP_HASH=$(md5 -q -s $REACT_APP_ALL) react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -61,5 +62,6 @@
     "@storybook/react": "^6.2.9",
     "@types/styled-components": "^5.1.9",
     "styled-components": "^5.3.0"
-  }
+  }, 
+  "proxy": "https://cors-anywhere.herokuapp.com"
 }
