--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -18,9 +18,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "source ./.env.local && REACT_APP_TS=1 REACT_APP_ALL=$(echo $REACT_APP_TS$MARVEL_PRIVATE_KEY$REACT_APP_PUBLIC_KEY) REACT_APP_HASH=$(md5 -q -s $REACT_APP_ALL) react-scripts start",
+    "start": "source ./.env.local &&  REACT_APP_TS=1 REACT_APP_ALL=$(echo $REACT_APP_TS$MARVEL_PRIVATE_KEY$REACT_APP_PUBLIC_KEY) REACT_APP_HASH=$(md5 -q -s $REACT_APP_ALL) react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "SKIP_PREFLIGHT_CHECK=true react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
