--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test": "SKIP_PREFLIGHT_CHECK=true react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public", 
+    "format": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +62,7 @@
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
     "@types/styled-components": "^5.1.9",
+    "prettier": "^2.3.0",
     "styled-components": "^5.3.0"
   }
 }
