Remove unused cor-anywhere stuff.
I think the cors error must have been becaues I early on was accessing a bad endpoint.

--- a/.env.template
+++ b/.env.template
@@ -2,5 +2,5 @@ REACT_APP_PUBLIC_KEY=public_key_goes_here
 MARVEL_PRIVATE_KEY=private_key_goes_here
 
 # See notes in the readme.
-REACT_APP_MARVEL_API_PATH=https://cors-anywhere.herokuapp.com/https://gateway.marvel.com/v1/public
+REACT_APP_MARVEL_API_PATH=https://gateway.marvel.com/v1/public
 SKIP_PREFLIGHT_CHECK=true
